# Prata

./: CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feature_Request.md
Documentation/: Readme
Documentation/UserStories/: Diagram0.dia  Diagram1.dia  Diagram1.eps  Diagram10.dia  Diagram10.eps  Diagram11.dia  Diagram11.eps  Diagram12.dia  Diagram12.eps  Diagram13.dia  Diagram13.eps  Diagram13b.dia  Diagram13b.dia~  Diagram13b.eps  Diagram14.dia  Diagram14.eps  Diagram15.dia~  Diagram15.eps  Diagram2.dia  Diagram2.eps  Diagram3.dia  Diagram3.eps  Diagram4.dia  Diagram4.eps  Diagram5.dia  Diagram5.eps  Diagram6.dia  Diagram6.eps  Diagram7.dia  Diagram7.eps  Diagram8.dia  Diagram8.eps  Diagram9.dia  Diagram9.eps  (+19 more)
Gui/: graph.py  gui.py  test.py  test2.py
Rust/: Build.bat  Cargo.toml  install.bat  install.sh  installJulia.bat  installJulia.jl  setup.py  test.jl  test.py  test1.py  test_statistics.py  test_stats_performance.py
Rust/TALA/: Project.toml  __init__.py  buttons.py  graph.py  gui.py  test.py
Rust/TALA/TALA.jl/TALA/: Manifest.toml  Project.toml
Rust/TALA/TALA.jl/TALA/src/: TALA.jl
Rust/TALA/TALA.py/: __init__.py
Rust/src/: TEST_Channel.rs  channel.rs  data.rs  lib.rs  main.rs  master.rs  master_process.rs  messaging.rs  publisher.rs  subscriber.rs
Rust/src/master/: master_process.rs
TALA/: install.bat  install.sh  setup.py
Tala_orig_python/: publisher.py  subscriber.py  talaMaster.py
prata/: Cargo.toml  install.bat  install.sh  run_tests.bat  run_tests.sh  setup.py
(+53 files in other folders)
